--- a/webgl/exam.geometics/1.line_collision.html
+++ b/webgl/exam.geometics/1.line_collision.html
@@ -67,7 +67,8 @@
             controls.update();
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 50, 1 ,0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper( 8, 16 ,0x00ff00,0xff0000);
+            //var helper = new THREE.GridHelper( 200, 40, 0x0000ff, 0x808080 );
             this.scene.add(helper);
 
             this.AppObject = {
