geometics line collision sample

--- a/webgl/exam.ammojs/1.hello.html
+++ b/webgl/exam.ammojs/1.hello.html
@@ -12,7 +12,7 @@
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
     <script src="../libs/elvis5/core.js"></script>
 
-    <script src="./ammo.js"></script>
+    <script src="../libs/threejs/js/libs/ammo.js"></script>
 
 
 </head>
