--- a/webgl/exam.3.math/1.2.1.use_quaternion.html
+++ b/webgl/exam.3.math/1.2.1.use_quaternion.html
@@ -68,8 +68,8 @@
 
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 50, 1 );
-            helper.setColors(0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper( 8,32 ,0x00ff00,0xff0000);
+
             this.scene.add(helper);
 
             //본헬퍼(삼각뿔)
