--- a/webgl/exam.3.math/2.1.unproject.html
+++ b/webgl/exam.3.math/2.1.unproject.html
@@ -9,11 +9,16 @@
 
     <title>2d -> 3d</title>
 
-    <script src='../libs/jquery-2.0.3.min.js'></script>
-
     <script src='../libs/threejs/three.js'></script>
-    <script src='../libs/threejs/CSS3DRenderer.js'></script>
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
+    <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
+    <script src="../libs/elvis5/core.js"></script>
+
+    <!--<script src='../libs/jquery-2.0.3.min.js'></script>-->
+
+    <!--<script src='../libs/threejs/three.js'></script>-->
+    <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
+    <!--<script src="../libs/ramb3d/core.js"></script>-->
 
 </head>
 <body style="margin: 0px;" >
