--- a/webgl/exam.3.math/1.1.update_matrix.html
+++ b/webgl/exam.3.math/1.1.update_matrix.html
@@ -64,8 +64,8 @@
             var self = this;
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 50, 1 );
-            helper.setColors(0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper(  1,50 ,0x00ff00,0xff0000);
+
             this.scene.add(helper);
 
             //본헬퍼(삼각뿔)
