--- a/webgl/exam.7.2d_effect/2.tex_canvas.html
+++ b/webgl/exam.7.2d_effect/2.tex_canvas.html
@@ -43,8 +43,7 @@
             var scope = this;
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 3, 1 );
-            helper.setColors(0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper( 3, 8 ,0x00ff00,0xff0000);
             this.scene.add(helper);
 
             var size = 48;
