--- a/webgl/exam.7.2d_effect/7.updateUV.html
+++ b/webgl/exam.7.2d_effect/7.updateUV.html
@@ -54,8 +54,8 @@
             var scope = this;
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 3, 1 );
-            helper.setColors(0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper( 1, 8 ,0x00ff00,0xff0000);
+
             this.scene.add(helper);
 
             var textureLoader = new THREE.TextureLoader();
