--- a/webgl/exam.2.gl/2.1.custom_geo.html
+++ b/webgl/exam.2.gl/2.1.custom_geo.html
@@ -20,7 +20,7 @@
 
 <script>
 
-    let Smgr = new ramb3d.scene.SceneManager({
+    let Smgr = new elvis5.scene.SceneManager({
         camera : {
             fov : 45,
             far : 5000,
