--- a/webgl/exam.2.gl/2.2.skined.html
+++ b/webgl/exam.2.gl/2.2.skined.html
@@ -18,7 +18,7 @@
 
 <script>
 
-    var Smgr = new ramb3d.scene.SceneManager({
+    var Smgr = new elvis5.scene.SceneManager({
         camera : {
             fov : 45,
             far : 5000,
