--- a/webgl/exam.3.math/1.3.inverse.html
+++ b/webgl/exam.3.math/1.3.inverse.html
@@ -13,7 +13,7 @@
 
     <!--<script src='../libs/threejs/three.js'></script>-->
     <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
-    <!--<script src="../libs/ramb3d/core.js"></script>-->
+    <!--<script src="../libs/elvis5/core.js"></script>-->
 
     <!--<script src="../exam.2.gl/js/controls/OrbitControls.js"></script>-->
 
@@ -41,7 +41,7 @@
 
     var container_window_element = document.querySelector('#mycanvas');
 
-    var Smgr = new ramb3d.scene.SceneManager({
+    var Smgr = new elvis5.scene.SceneManager({
         camera : {
             fov : 45,
             far : 5000,
