--- a/webgl/exam.3.math/2.1.unproject.html
+++ b/webgl/exam.3.math/2.1.unproject.html
@@ -18,13 +18,13 @@
 
     <!--<script src='../libs/threejs/three.js'></script>-->
     <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
-    <!--<script src="../libs/ramb3d/core.js"></script>-->
+    <!--<script src="../libs/elvis5/core.js"></script>-->
 
 </head>
 <body style="margin: 0px;" >
 
 <script>
-    var Smgr = new ramb3d.scene.SceneManager({
+    var Smgr = new elvis5.scene.SceneManager({
         camera : {
             fov : 45,
             far : 5000,
