--- a/webgl/exam.3.math/2.2.picking.html
+++ b/webgl/exam.3.math/2.2.picking.html
@@ -21,7 +21,7 @@
 <body style="margin: 0px;" >
 
 <script>
-    var Smgr = new ramb3d.scene.SceneManager({
+    var Smgr = new elvis5.scene.SceneManager({
         camera : {
             fov : 45,
             far : 5000,
