--- a/blaze/client/main.html
+++ b/blaze/client/main.html
@@ -1,11 +1,12 @@
 <head>
-  <title>blaze</title>
+  <title>로동 이즈 베리 임폴턴트!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <h1>NWM! webgl example for blaze</h1>
-
-  {{> hello}}
+  <p>로동 이즈 베리 임폴턴트!</p>
+  <!--{{> hello}}-->
+<!-- 여기에 blaze-layout 패키지에 의해서 layout 탬플릿이 삽입된다. -->
 </body>
-
 
