예제 폴더 정리

--- a/blaze/client/exam.2.gl/1.line.object/main.html
+++ b/blaze/client/exam.2.gl/1.line.object/main.html
@@ -1,8 +1,9 @@
-<template name="skeleton-layout">
+<template name="exam2-1-layout">
 
-  <P> exam 2 </P>
+  <P> exam 2 gl sample </P>
   <div id='mycanvas' style="
     margin: auto;
     width: 320px;height: 240px;" ></div>
 
 </template>
+
