custom geo 예제 추가

--- a/blaze/client/exam.2.gl/2.1.custom_geo/main.html
+++ b/blaze/client/exam.2.gl/2.1.custom_geo/main.html
@@ -1,6 +1,6 @@
-<template name="skeleton-layout">
+<template name="customGeoLayout">
 
-  <P> skeleton </P>
+  <P> custom geo layout </P>
   <div id='mycanvas' style="
     margin: auto;
     width: 320px;height: 240px;" ></div>
