--- a/webgl/exam.2.gl/7.vertex_update.html
+++ b/webgl/exam.2.gl/7.vertex_update.html
@@ -94,7 +94,7 @@
 
                 temp_x += event.deltaTick * 3.14;
                 //console.log(temp_x)
-                console.log(Math.sin(temp_x));
+                //console.log(Math.sin(temp_x));
 
                 this.lineObject.geometry.vertices[1].x = Math.sin(temp_x);
                 this.lineObject.geometry.vertices[1].y = Math.cos(temp_x);
