--- a/public/sample3js/ex05/index.html
+++ b/public/sample3js/ex05/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exam 01</title>
+    <title> UI : lil-gui </title>
     <style>
         body { margin: 0; }
     </style>
@@ -17,7 +17,9 @@
         {
             "imports": {
                 "three": "/threejs/build/three.module.js",
-                "WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js"
+                "WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js",
+                "OrbitControls" : "/threejs/examples/jsm/controls/OrbitControls.js",
+                "lil-gui" : "/threejs/examples/jsm/libs/lil-gui.module.min.js"
             }
         }
     </script>
