--- a/public/webgl/exam.2.gl/7_vertex_update/index.html
+++ b/public/webgl/exam.2.gl/7_vertex_update/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exam 01</title>
+    <title>vertex update</title>
     <style>
         body { margin: 0; }
     </style>
@@ -16,8 +16,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "/threejs/build/three.module.js",
-                "WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js"
+                "three": "/threejs/build/three.module.js"
             }
         }
     </script>
