--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <li><a href="sample3js/ex05">UI : lil-gui sample</a></li>
         <hr/>
         <li><a href="webgl/exam.2.gl/7_vertex_update">dynamic vertex update</a></li>
+        <hr/>
+        <li><a href="sample3js/ex06">fbx loader</a></li>
         
     </ul>
     
