--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
         <li><a href="webgl/exam.2.gl/7_vertex_update">dynamic vertex update</a></li>
         <hr/>
         <li><a href="sample3js/ex06">fbx loader</a></li>
+        <hr/>
+        <li><a href="sample3js/ex07_windowed">window mode</a></li>
+        <hr/>
+        <li><a href="sample3js/ex08_sceneIO">scene io</a></li>
         
     </ul>
     
