--- a/public/sample3js/ex01/index.html
+++ b/public/sample3js/ex01/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 
-    <!-- <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script> -->
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
     <script type="importmap">
         {
             "imports": {
                 "three": "/threejs/build/three.module.js",
+                "state" : "/threejs/examples/jsm/libs/stats.module.js",
                 "WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js"
             }
         }
@@ -24,7 +25,7 @@
 
     <script type="module">
         import  main  from './index.js';
-        document.addEventListener('DOMContentLoaded', main);
+        main()
     </script>
     
 </body>
