--- a/public/sample3js/ex04/index.html
+++ b/public/sample3js/ex04/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!-- <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script> -->
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
     <script type="importmap">
         {
@@ -23,7 +23,8 @@
 
     <script type="module">
         import  main  from './index.js';
-        document.addEventListener('DOMContentLoaded', main);
+        //document.addEventListener('DOMContentLoaded', main);
+        main()
     </script>
     
 </body>
