--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
         <li><a href="sample3js/ex07_windowed">window mode</a></li>
         <hr/>
         <li><a href="sample3js/ex08_sceneIO">scene io</a></li>
-        
+    </ul>
+
+    <h2> elvis sample </h2>
+    <ul>
+        <li><a href="example/ex01">hello world</a></li>
+        <li><a href="example/ex02">windowed</a></li>
+        <li><a href="example/ex03">transform control</a></li>
     </ul>
     
 </body>
