shadow map link

--- a/public/example/ex03/index.html
+++ b/public/example/ex03/index.html
@@ -33,9 +33,15 @@
                 <p></p>
             </div>
 
+            <div class="objPos">
+                <p></p>
+            </div>
+
             <div class="cmdInput">
                 <input>
             </div>
+
+            <button class="focus-object" >focus object</button>
             
         </div>
     </div>
