--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         <li><a href="example/ex01">hello world</a></li>
         <li><a href="example/ex02">windowed</a></li>
         <li><a href="example/ex03">transform control</a></li>
+        <li><a href="example/ex04">shadoe</a></li>
     </ul>
     
 </body>
