--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,15 @@
         <li><a href="example/ex01">hello world</a></li>
         <li><a href="example/ex02">windowed</a></li>
         <li><a href="example/ex03">transform control</a></li>
-        <li><a href="example/ex04">shadoe</a></li>
+        <li><a href="example/ex04">shadow</a></li>
+        <li><a href="example/ex05_normalmap">normal map #1</a></li>
+
+        <li><a href="example/gltf/ex01">gltf 1 </a></li>
+        <li><a href="example/gltf/ex02_norm">gltf normal</a></li>
+    </ul>
+    <h2> math sample </h2>
+    <ul>
+        <li><a href="example/math/ex01_collider">collider</a></li>
     </ul>
     
 </body>
