--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,9 @@
     </ul>
     <h2> math sample </h2>
     <ul>
-        <li><a href="example/math/ex01_collider">collider</a></li>
+        <li><a href="example/math/ex01_collider">collider 1</a></li>
         <li><a href="example/math/ex02_matrix"> matrix 로 직접 변환시키기 </a></li>
+        <li><a href="example/math/ex03_collider">collider 2 </a></li>
     </ul>
     
 </body>
