--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <hr/>
         <li><a href="sample3js/ex05">UI : lil-gui sample</a></li>
         <hr/>
-        <li><a href="webgl/exam.2.gl/7_vertex_update">dynamic vertex update</a></li>
+        <li><a href="example/webgl/vertex_update">dynamic vertex update</a></li>
         <hr/>
         <li><a href="sample3js/ex06">fbx loader</a></li>
         <hr/>
@@ -36,6 +36,7 @@
         <hr/>
         <li><a href="example/gltf/ex01">gltf 1 </a></li>
         <li><a href="example/gltf/ex02_norm">gltf normal</a></li>
+        <li><a href="example/gltf/ex03"> apple </a></li>
         <hr/>
         <li><a href="example/pbr/ex01">standard material example 1</a></li>
     </ul>
