--- a/public/example/ex01/index.html
+++ b/public/example/ex01/index.html
@@ -20,10 +20,7 @@
         {
             "imports": {
                 "three": "/threejs/build/three.module.js",
-                "state" : "/threejs/examples/jsm/libs/stats.module.js",
-                "WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js",
-                "OrbitControls" : "/threejs/examples/jsm/controls/OrbitControls.js",
-                "lil-gui" : "/threejs/examples/jsm/libs/lil-gui.module.min.js",
+                "three/addons/": "/threejs/examples/jsm/",
                 "elvis" : "/elvis/module/elvis5/core.js"
                 
             }
