--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
         <li><a href="example/ex03">transform control</a></li>
         <li><a href="example/ex04">shadow</a></li>
         <li><a href="example/ex05_normalmap">normal map #1</a></li>
+        <li><a href="example/ex08_helper">helper</a></li>
         <hr/>
         <li><a href="example/gltf/ex01">gltf 1 </a></li>
         <li><a href="example/gltf/ex02_norm">gltf normal</a></li>
